# simple-aws

./: LICENSE  README.md  pyproject.toml  requirements.txt
doc/: dev.md
src/gm_saws/: cognito.py  ddb.py  utils.py
src/simple-aws/: ddb.py
tests/: hello.py
