# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gm_saws"
version = "0.1.2"
description = "[Grey Matters][Simple AWS] This is a wrapper over AWS boto3 to simplify many common AWS tasks"
readme = "README.md"
authors = [{ name = "Sunny Gupta", email = "sunnymax2002@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["aws", "dynamodb"]
dependencies = [
    "pydantic >= 1.10.9",
    "boto3 >= 1.26.151",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/sunnymax2002/simple-aws"